# BotayBMSTU

./: CMakeLists.txt  README.md  app.cpp  app.hpp  main.cpp
Interface/: Button.hpp  ButtonCreator.hpp  ClassField.hpp  Day.hpp  Dialog.hpp  ExtendedButton.hpp  Interface.hpp  Textbox.hpp
Interface/Interface/: Textbox.hpp
ScheduleParser/: CMakeLists.txt  Schedule.txt  ScheduleParser.cpp  ScheduleParser.hpp  URL_Adress_For_Parser.txt
ScheduleParser/ScheduleParser/: ScheduleParser.hpp
